web/themes/custom/nkh/src/sass/layouts/sections/_postscript-section.scss
// for all postscript region
.region-postscript{
  
}

// the following for core-partners and national partners on homepage only.
// should NKH choose to have the views display sitewide, we will need a different strategy.
.path-frontpage{
  .region-postscript{
    max-width: 1200px;
    margin: 0 auto;
  }
}
.block-views-block-core-partners-core-partners,
.block-views-block-core-partners-national-partners{
  z-index: 100;
  padding: 2rem;
  margin: 0;
  vertical-align: top;
  h2{
    font-size: 1.4rem;
    text-transform: uppercase;
    margin-bottom: 2.5rem;
    margin-left: .3rem;
    color: $nkh-text;
  }
  @include breakpoint($min768) {
    width: 49%;
    display: inline-block;    
  }
  @include breakpoint($min1024) {
    width: 49.7%;
  }
  a{
    &:after { content: none; }    
  }
}
.block-views-block-core-partners-core-partners{
  .view-content{
    @include breakpoint($min480) {
      margin-left: 0;    
    }
    & > div{
      display: inline-block;
      vertical-align: middle;
      width: 21%;
      margin-left: 1%;
      margin-bottom: 1%;
      + div{ 
        margin-left: 2.7%;
      }
    }
  }

}
.block-views-block-core-partners-national-partners{
  .owl-carousel{
    position: relative;
  }
  .owl-stage-outer{
    width: 75%;
    margin: 0 auto;
    max-height: 120px;
    .owl-stage .owl-item {
      display: inline-block;
      float: none;      
    } 
  }
  .owl-stage{
    display:flex;
    align-content: center;
    .owl-item{
      vertical-align: middle;
      max-width: 90px;
      width:calc(((100vw - 40px) - 4rem) * 0.23) !important;
      @include breakpoint($min1024) {
        max-width: 106px;
      }
      @include breakpoint($min1120) {
        max-width: 117px;
      }
      > div {
        display:flex;
        align-items: center;
        height: 100%;
      }

    }    
  }
  .views-field-field-image-logo{
    .field-content{
      position: relative;
    }
    a{
      display: flex;
      max-height: 100%;
      justify-content: center;
      img{
        max-width: 100%;
        max-height: 117px;
        height:100%;
        display: block;
        margin: auto;
        -webkit-transform-style: unset;
      }
    }
  }
  //navigation
  .owl-nav{
    width: 100%;
  }
  .owl-prev,
  .owl-next{
    position: absolute;
    top: 3.4rem;
  }
  .owl-prev{
    &.disabled{
      .icon-prev{
        cursor: default;
        background: rgba($nkh-lightgrey, .5);    
      }
    }
  }
  .owl-next{
    right: 0;
  }
  .icon-prev,
  .icon-next{
    color: $white;
    background: $nkh-lightgrey;
    border-radius: 50%;
    padding: .8rem .8rem .4rem;
    font-size: 2rem;
    &:hover,
    &:active{
      background: $nkh-darkgrey-hover;
    }
    @include breakpoint($min768) {
      font-size: 2.5rem;
    }
  }
}

